examples/datalog/07_filters/13_constant_comparison.dl
% Test: Constant vs constant comparison
% Expected: Static conditions evaluated correctly
% Category: 07_filters
% Priority: P2 - Filter patterns

.kg create test_const_cmp
.kg use test_const_cmp

+data[(1, "a"), (2, "b"), (3, "c")].

% True constant comparison
always_true(X, V) :- data(X, V), 5 > 3.

?- always_true(X, V).

% False constant comparison - should return empty
always_false(X, V) :- data(X, V), 3 > 5.

?- always_false(X, V).

.kg use default
.kg drop test_const_cmp
